--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ subjects:
 - !lcsh 'Shipwrecks -- Poetry'
 - !lcsh 'Titanic (Steamship) -- Poetry'
 - !lcc 'PS'
+- GITenberg
 title: The Titanic Disaster Poem
 url: http://www.gutenberg.org/ebooks/32099
